Fold in changes present in released 0.01, but not in repository

--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,17 @@
 ---
 abstract: 'RFC close address list parsing'
+author:
+  - 'Ruslan Zakirov <ruz@bestpractical.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.36
+  JSON: 0
+  Test::More: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
 generated_by: 'Module::Install version 1.06'
-license: unknown
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -17,4 +21,8 @@ no_index:
   directory:
     - inc
     - t
+requires:
+  Email::Address: 0
+resources:
+  license: http://dev.perl.org/licenses/
 version: 0.02
