--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,11 @@ abstract: 'RFC close address list parsing'
 author:
   - 'Ruslan Zakirov <ruz@bestpractical.com>'
 build_requires:
-  ExtUtils::MakeMaker: 6.36
+  ExtUtils::MakeMaker: 6.59
   JSON: 0
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.36
+  ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
 generated_by: 'Module::Install version 1.06'
@@ -23,6 +23,7 @@ no_index:
     - t
 requires:
   Email::Address: 0
+  perl: 5.10.0
 resources:
   license: http://dev.perl.org/licenses/
 version: 0.03
